--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,13 +1,3 @@
 :root {
-    /* --vp-c-brand: #b62838;
-    --vp-c-brand-light: #b62838; */
-
-    /* --vp-sidebar-width: 300px; */
+    --vp-sidebar-width: 300px;
 }
-
-/* .VPNavBarTitle .title {
-    font-family: Oswald,sans-serif;
-    font-weight: 300;
-    letter-spacing: 6px;
-    white-space: nowrap;
-} */
